--- a/layouts/partials/cfa.html
+++ b/layouts/partials/cfa.html
@@ -1,1 +1,4 @@
-<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "{{ .Site.Params.blog_domain }}"}'></script><!-- End Cloudflare Web Analytics -->
+{{ with .Site.Params.cfa_token }}
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "{{ . }}"}'></script><!-- End Cloudflare Web Analytics -->
+{{ end }}
+
